대충 틀만 잡음

--- a/src/main/resources/templates/admin/adminDefault.html
+++ b/src/main/resources/templates/admin/adminDefault.html
@@ -74,7 +74,7 @@
             <div id="main-menu" class="main-menu collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="/admin/"><i class="menu-icon fa fa-laptop"></i>Dashboard </a>
+                        <a href="/admin"><i class="menu-icon fa fa-laptop"></i>Dashboard </a>
                     </li>
                     <li class="menu-title">UI elements</li><!-- /.menu-title -->
                     <li>
@@ -93,13 +93,13 @@
                         <a href="/admin/priceCast/list"> <i class="menu-icon fa fa-microphone"></i>난가예보관리 </a>
                     </li>
                     <li>
-                        <a href="/#"> <i class="menu-icon fa fa-history"></i>계란생산이력관리 </a>
+                        <a href="/admin"> <i class="menu-icon fa fa-history"></i>계란생산이력관리 </a>
                     </li>
                     <li>
-                        <a href="/#"> <i class="menu-icon fa fa-truck-moving"></i>전국유통망관리 </a>
+                        <a href="/admin"> <i class="menu-icon fa fa-truck-moving"></i>전국유통망관리 </a>
                     </li>
                     <li>
-                        <a href="/#"> <i class="menu-icon fa fa-users"></i>전국양계인관리 </a>
+                        <a href="/admin"> <i class="menu-icon fa fa-users"></i>전국양계인관리 </a>
                     </li>
                     <li>
                         <a href="/admin/deposit/list"> <i class="menu-icon fa fa-hand-holding-usd"></i>입출금관리관리 </a>
@@ -118,13 +118,15 @@
         <header id="header" class="header">
             <div class="top-left">
                 <div class="navbar-header">
-                    <a class="" href="./">코리아에그 관리자메뉴</a>
+                    <a class="" href="/admin">코리아에그 관리자메뉴</a>
                     <a id="menuToggle" class="menutoggle"><i class="fa fa-bars"></i></a>
+
                 </div>
             </div>
             <div class="top-right">
                 <div class="header-menu">
                     <div class="header-left">
+                        <a class="" href="/">코리아에그 홈페이지</a>
                         <!--TODO 나중에 추가하기-->
                         <!--<div class="dropdown for-notification">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="notification" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
