--- a/src/main/resources/templates/error/error-500.html
+++ b/src/main/resources/templates/error/error-500.html
@@ -60,8 +60,8 @@
           <div class="col-lg-5">
             <!-- Title -->
             <div class="mb-4">
-              <h1 class="h3">ERROR</h1>
-              <p class="lead">서버에서 문제가 발생하였습니다.</p>
+              <h1 class="h3">서버에서 문제가 발생하였습니다.</h1>
+              <p class="lead">문제가 계속 발생된다면 관리자에게 문의 바랍니다.</p>
               <div>
                 Message : <br><span th:text="${#httpServletRequest.getAttribute('javax.servlet.error.message')}"></span><br><br>
                 exception : <br><span th:text="${#httpServletRequest.getAttribute('javax.servlet.error.exception')}"></span><br><br>
