--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -30,7 +30,7 @@
                         <div class="col-sm-1 d-none d-sm-block"><span th:text="${board.boardName}" class="text-danger">공지</span></div>
                         <div class="col-12 col-sm-8 text-left">
                             <span th:text="${board.boardName}" class="badge badge-primary d-block d-sm-none"></span>
-                            <a th:href="@{/templates/board(id=${board.id})}"><span th:text="${board.title}" ></span></a>
+                            <a th:href="@{read(id=${board.id})}"><span th:text="${board.title}" ></span></a>
                             <span th:text="${#dates.format(board.regDate, 'yyyy.MM.dd')}" class="d-block d-sm-none"></span>
                         </div>
                         <div th:text="${#dates.format(board.regDate, 'yyyy.MM.dd')}" class="col-sm-2 d-none d-sm-block">2016.05.01</div>
@@ -38,11 +38,6 @@
                 </ul>
             </div>
             <!--END 전체난가정보-->
-            <div class="row">
-                <div class="col-md-3 col-md-offset-3">
-                    <a role="button" class="btn btn-sm btn-primary btn-wide text-white" th:href="@{register}">글등록</a>
-                </div>
-            </div>
         </div>
         <!--END 난가정보 section-->
     </main>
