--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -10,9 +10,9 @@
                         <nav class="js-mega-menu navbar navbar-expand-lg u-header__navbar">
                             <!-- Logo -->
                             <div class="u-header__navbar-brand-wrapper">
-                                <a class="navbar-brand u-header__navbar-brand" href="/" aria-label="Space">
+                                <a class="navbar-brand u-header__navbar-brand" href="/" >
                                     <img class="u-header__navbar-brand-on-scroll" th:src="@{/svg/logos/logo.svg}" alt="Logo"/>
-                                    <img class="u-header__navbar-brand-mobile" th:src="@{/svg/logos/logo-short.svg}" alt="Logo"/>
+                                    <img class="u-header__navbar-brand-mobile" th:src="@{/svg/logos/logo.svg}" alt="Logo"/>
                                 </a>
                             </div>
                         <!-- End Logo -->
